--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Hellow Word!</title>
+</head>
+<body>
+	<h1>Hellow Word!</h1>
+	<script type="text/javascript">
+	alert("123");
+	</script>
+</body>
+</html>
