--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Hellow Word!</title>
-  </head>
-  <body>
-    <h1>Hellow Word!</h1>
-  </body>
+<head>
+	<title>Hellow Word!</title>
+</head>
+<body>
+	<h1>Hellow Word!</h1>
+	<script type="text/javascript">
+	document.write("Hellow");
+	alert("123");
+	</script>
+</body>
 </html>
-
